blocks/header/header.css
.header {
  z-index: 4;
  position: relative;
}

.meganav-bg {
  background-color: #FFFFFF;
  width: 100%;
  height: 160%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 3;
  border-bottom: 1px solid black;
}

@media (min-width: 414px) {
  .meganav-bg {
    height: 120%;
  }
}
@media (min-width: 800px) {
  .meganav-bg {
    height: 100%;
  }
}

.body-locked {
  overflow: hidden;
  height: 100%;
  width: 100%;
  position: fixed;
}

#nav {
  height: var(--nav-height);
  gap: 0 15px;
  display: grid;
  position: relative;
  grid-template-columns: 1px 145px auto 25px 1px;
  grid-template-rows: 7px auto 7px auto auto 20px;
}

.header-wrapper .hidden,
#nav .hidden {
  display: none !important;
}

#nav button,
#nav a {
  -webkit-tap-highlight-color: transparent;
}

#nav .nav-brand {
  margin: auto 0;
  grid-row: 1/3;
  grid-column: 2/3;
}

#nav .nav-brand p {
  margin: auto 0;
  line-height: 13px;
}

#nav .nav-tools-mobile {
  grid-row: 4/5;
  grid-column: 1/6;
  padding: 16px 10px;
  position: relative;
  z-index: 2;
  background-color: #FFFFFF;
}

#nav .nav-login,
#nav .user-btn {
  margin: auto 0 auto auto;
  grid-row: 1/3;
  grid-column: 3/4;
}

#nav .nav-hamburger,
#nav .nav-close {
  grid-row: 1/3;
  grid-column: 4/5;
  margin: auto 0;
}

#nav .nav-meganav {
  grid-row: 5/6;
  grid-column: 1/6;
  z-index: 2;
  background-color: #FFFFFF;
}

#nav .nav-brand .icon-logo {
  height: 31px;
  width: 145px;
}

#nav .search-input {
  width: 100%;
  height: 48px;
  border-radius: 360px;
  padding-left: 16px;
}

#nav .header-wrapper.search-input::placeholder {
  color: #909090;
  font-size: 16px;
  line-height: 20px;
}

#nav .search-btn {
  background: transparent;
  padding: 0;
  margin: 0;
  border: 0;
  position: absolute;
  right: 33px;
  top: 50%;
  transform: translateY(-50%);
  border-radius: 0;
}

#nav .nav-login ul {
  display: none;
}

#nav .login-btn {
  background-color: #C74D2F;
  margin: 0;
  padding: 13px 24px;
}

#nav .user-btn {
  background-color: transparent;
  border: 0;
  border-radius: 0;
  padding: 0;
  margin: 11px 0;
}

#nav .user-btn img {
  width: 40px;
  height: 40px;
  aspect-ratio: auto 40 / 40;
}

#nav .nav-meganav li {
  list-style-type: none;
  padding-left: 0;
  margin-bottom: 0;
}

#nav .nav-meganav ul {
  padding-left: 0;
}

#nav .nav-meganav > ul > li {
  border-bottom: 1px solid #000000;
}

#nav .nav-meganav .pet-topic {
  display: flex;
  margin-bottom: 0;
}

#nav .nav-meganav .pet-topic-info {
  margin-left: 12px;
}

#nav .nav-meganav .pet-topic-title {
  display: block;
  margin-bottom: 8px;
}

#nav .menu-item {
  box-sizing: border-box;
  display: block;
  color: #000000;
  font-family: "Libre Franklin";
  font-size: 18px;
  line-height: 22px;
  padding: 24px;
  border-bottom: 1px solid #000000;
  background-color: transparent;
  border-radius: 0;
  width: 100%;
  text-decoration: none;
  font-weight: 500;
  text-align: left;
}

#nav button.menu-item {
  border: 0;
  border-bottom: 1px solid #000000;
}

#nav .menu-item:last-of-type {
  border: 0;
}

#nav .collapsible {
  margin: 0;
}

#nav .collapsible::after {
  content: '\2303';
  font-size: 20px;
  color: #000000;
  float: right;
  transform: rotate(180deg) translateY(6px);
}

#nav .collapsible.active {
  background-color: #3C0040;
  color: #FFFFFF;
}

#nav .collapsible.active:after {
  transform: none;
  color: #FFFFFF;
}

#nav .content {
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.2s ease-out;
  font-family: Raleway, sans-serif;
}

#nav .content li {
  padding: 12px 16px;
  display: flex;
}

#nav .content li:first-of-type {
  padding-top: 16px;
}

#nav .content li:last-of-type {
  padding-bottom: 24px;
}

#nav .content li div:first-child {
  margin-right: 12px;
}

#nav .content a {
  color: #000000;
  text-decoration: none;
  font-weight: 600;
  font-size: 16px;
  line-height: 19px;
  margin-bottom: 8px;
}

#nav .content p {
  color: #8A8A8A;
  font-size: 12px;
  line-height: 14px;
}

#nav .nav-hamburger button,
#nav .nav-close button,
#nav .nav-language-selector button {
  background-color: transparent;
  border: 0;
  border-radius: 0;
  padding: 0;
  margin: 0;
  display: flex;
  align-items: center;
  justify-content: center;
}

.nav-language-selector-desktop {
  grid-row: 6/7;
  grid-column: 1/6;
  z-index: 3;
  margin: 32px auto 0;
}

#nav .account-options {
  display: flex;
  flex-direction: column;
  background-color: #FFFFFF;
  border-radius: 0 0 10px 10px;
  border: 1px solid #E4E4EB;
  box-shadow: 0px 34px 21px 0px #0000000D;
  position: absolute;
  left: 0;
  width: 100%;
  top: 100%;
  z-index: 3;
}

#nav .account-btn,
#nav .sign-out-btn {
  background-color: transparent;
  border: 0;
  border-radius: 0;
  color: #000000;
  font-weight: 500;
  font-size: 16px;
  line-height: 20px;
  text-align: left;
  padding: 14px 24px;
  margin: 0;
  text-decoration: none;
  font-family: "Libre Franklin";
}

#nav .account-btn {
  border-bottom: 1px solid #E4E4EB;
}

#nav .nav-featured-article {
  display: none;
}

#nav .nav-language-selector {
  grid-row: 6/6;
  grid-column: 1/6;
  margin: 32px auto auto;
}

#nav .nav-language-selector button::after {
  display: flex;
  content: '\2303';
  font-size: 18px;
  color: #000000;
  float: right;
  transform: rotate(180deg) translateY(3px);
  margin-left: 8px;
}

#nav .nav-language-selector button {
  font-size: 1.5rem;
  margin: 0;
  padding: 0;
  border: none;
  border-radius: 0;
  line-height: 1rem;
  z-index: 999;
  background-color: transparent;
  padding: 8px 48px 8px 24px;
}

#nav .nav-language-selector button.active::after {
  transform: rotate(0deg) translateY(3px);
}

#nav .nav-language-selector a {
  line-height: 1.3rem;
  text-decoration: none;
  display: flex;
  align-items: center;
  color: #000000;
  border: 1px solid #E4E4EB;
  border-radius: 8px;
  font-size: 1.5rem;
  padding: 8px 48px 8px 24px;
  background-color: var(--background-color);
}
/* ... */

